tooling/nargo_cli/tests/snapshots/execution_success/a_2_div/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "z",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "2920182694213909827": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      },
      "7233212735005103307": {
        "error_kind": "string",
        "string": "attempt to multiply with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _12",
    "private parameters indices : [_0, _1, _2]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [_0]:32 bits []",
    "BLACKBOX::RANGE [_1]:32 bits []",
    "BLACKBOX::RANGE [_2]:32 bits []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 0 ]], outputs: [_3]",
    "EXPR [ (1, _1, _3) -1 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _0) 0 ], EXPR [ (1, _1) 0 ]], outputs: [_4, _5]",
    "BLACKBOX::RANGE [_4]:32 bits []",
    "BLACKBOX::RANGE [_5]:32 bits []",
    "EXPR [ (1, _1) (-1, _5) (-1, _6) -1 ]",
    "BLACKBOX::RANGE [_6]:32 bits []",
    "EXPR [ (-1, _1, _4) (1, _0) (-1, _5) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 0 ]], outputs: [_7]",
    "EXPR [ (1, _1, _7) -1 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _0) 0 ], EXPR [ (1, _1) 0 ]], outputs: [_8, _9]",
    "BLACKBOX::RANGE [_8]:32 bits []",
    "BLACKBOX::RANGE [_9]:32 bits []",
    "EXPR [ (1, _1) (-1, _9) (-1, _10) -1 ]",
    "BLACKBOX::RANGE [_10]:32 bits []",
    "EXPR [ (-1, _1, _8) (1, _0) (-1, _9) 0 ]",
    "EXPR [ (-1, _2) (1, _8) 0 ]",
    "EXPR [ (1, _1, _2) (-1, _11) 0 ]",
    "BLACKBOX::RANGE [_11]:32 bits []",
    "EXPR [ (1, _0) (-1, _11) (-1, _12) 0 ]",
    "BLACKBOX::RANGE [_12]:32 bits []",
    "EXPR [ (1, _5) (-1, _12) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]",
    "unconstrained func 1",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]"
  ],
  "debug_symbols": "pZLbisMgEIbfZa698BBzepVlCSYxRRATrC4sIe++E0227UWhtDf/Fx2/gYmuMOo+XjrjpvkK7dcKvTfWmktn50EFMzvcXTcC57ILXmvcgrs6Wovy2gVoXbSWwI+yMR26LsolBuWxSgloNyKx4WSs3r82crPpc7WuDrfh/7J82WZUHjpj9ENfvuOL+vQL8ZZffObz5on/jSs1GP9w3yDwIIEipUxZpqxS1imblIxmMGg5gmeIjCJDZpQZVUadgV0EAY5dcELOMrAL/m8uMrBLue2zeaN6q48HOUU33L3P8LuclfMFL34e9Bi93mdLNZz2Dw==",
  "file_map": {
    "50": {
      "source": "// Testing integer division: 7/3 = 2\nfn main(mut x: u32, y: u32, z: u32) {\n    let a = x % y;\n    assert(x / y == z);\n    assert(a == x - z * y);\n    assert(50_u64 % 9 == 5);\n}\n",
      "path": ""
    }
  },
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
